# jellyfin-discord-widget

./: .env.example  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  compose.yml  rustfmt.toml
.sqlx/: query-3594b918bada4d051a0f53b86486f31a5348d6ed46c776b1a77ba88062b51a1e.json  query-46e298cd8168d92ec3835babc5d7f230badca6e35a8a3f41a55d41251a628b02.json  query-a30bfeeb33f515fbdf433a9b92e478d94da53c3ad6d0470b34da788bb1b4cbc7.json  query-b2237e0ea8285aa8a5e7bdc02a97252f4ad916c1a4e7daafb14189910ecd71b2.json  query-ddfcaba2bc5e849e7ee9da1761b128edb0c553832ea26c7918facf72d76d528d.json  query-e2eca75602cb4d19cac2953b86085945c5dc14a0bc98cbbe26f51101ad504f41.json
migrations/: 0001_init.up.sql  0002_add_indexes.down.sql  0002_add_indexes.up.sql
src/: db.rs  main.rs
src/api/: auth.rs  mod.rs
src/api/sync/: error.rs  mod.rs  profile.rs  user.rs
src/api/ui/: connect.rs  mod.rs  sse.rs  status.rs  views.rs
src/discord/: api.rs  entities.rs  error.rs  mod.rs
src/jellyfin/: api.rs  entities.rs  error.rs  manager.rs  mod.rs
src/util/: config.rs  crypto.rs  mod.rs  session.rs  ssrf.rs
templates/: dashboard.html  index.html  playback_status.html  quick_connect_status.html
