[package]
name = "jellyfin-widget"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"] }

actix-web = "4"
actix-web-lab = "0.26"
actix-session = {version = "0.11", features = ["cookie-session"] }
askama = "0.16"

sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

reqwest = {version = "0.13", features = ["json", "rustls"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

aes-gcm = "0.10"
rand = "0.10"
base64 = "0.22"

dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
moka = { version = "0.12", features = ["future"] }
