[package]
name = "jellyfin-widget"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
futures-util = "0.3"

actix-web = "4"
actix-web-lab = "0.26"
actix-session = { version = "0.11", features = ["cookie-session"] }
askama = "0.16"

sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "6.2.1"

reqwest = { version = "0.13", features = ["form", "json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
url = "2"

aes-gcm = "0.10"
rand = "0.10"
base64 = "0.22"
hex = "0.4"


chrono = { version = "0.4", features = ["serde", "alloc"] }
uuid = { version = "1", features = ["serde", "v4"] }
humantime = "2.3.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
sha2 = "0.11"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
